# parquet_reader

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: driver_test.cpp  khiopsdriver_file_parquet.cpp  khiopsdriver_file_parquet.h  main.cpp  parquet_file.cpp  parquet_file.h
